# django_celery_task_manage

./: .dockerignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml  test.rest
.kilocode/rules/: AGENTS.md
cmetrics_history/: apps.py  models.py  serializers.py  urls.py  views.py
demo/: __init__.py  celery.py  settings.py  urls.py
long_time_task/: __init__.py  admin.py  apps.py  celery_tasks.py  models.py  registry.py  tasks.py  tasks_definitions.py  urls.py  views.py
long_time_task/migrations/: 0001_initial.py  0002_alter_longtimetask_options_and_more.py
plans/: long_time_task_system_design.md
