[project]
name = "django-celery-task-manage"
version = "0.1.0"
description = "Django Celery 后台任务管理系统"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "celery>=5.3",
    "redis>=5.0",
    "djangorestframework>=3.16.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-django",
]
